versions/v2.8/modules/en/pages/installation-and-upgrade/resources/resources.adoc
= Resources
:revdate: 2024-09-26
:page-revdate: {revdate}

== Docker Installations

The xref:[single-node Docker installation] is for Rancher users that are wanting to test out Rancher. Instead of running on a Kubernetes cluster using Helm, you install the Rancher server component on a single node using a `docker run` command.

Since there is only one node and a single Docker container, if the node goes down, there is no copy of the etcd data available on other nodes and you will lose all the data of your Rancher server.

== Air-Gapped Installations

Follow xref:installation-and-upgrade/other-installation-methods/air-gapped/air-gapped.adoc[these steps] to install the Rancher server in an air gapped environment.

An air gapped environment could be where Rancher server will be installed offline, behind a firewall, or behind a proxy.

== Advanced Options

When installing Rancher, there are several advanced options that can be enabled during installation. Within each install guide, these options are presented. Learn more about these options:

* xref:installation-and-upgrade/resources/custom-ca-root-certificates.adoc[Custom CA Certificate]
* xref:observability/logging/enable-api-audit-log.adoc[API Audit Log]
* xref:installation-and-upgrade/references/tls-settings.adoc[TLS Settings]
* xref:installation-and-upgrade/best-practices/tuning-etcd-for-large-installs.adoc[etcd configuration]
* {blank}
+
[cols=2*]
|===
| xref:installation-and-upgrade/other-installation-methods/air-gapped/local-system-charts.adoc[Local System Charts for Air Gap Installations]
| v2.3.0
|===
