versions/v2.9/modules/en/pages/installation-and-upgrade/resources/resources.adoc
= Resources
:page-languages: [en, zh]
:revdate: 2024-09-27
:page-revdate: {revdate}
:community-path: getting-started/installation-and-upgrade/resources/index.adoc 
:product-path: installation-and-upgrade/resources/resources.adoc
ifeval::["{build-type}" != "community"]
:xref-air-gap: xref:installation-and-upgrade/other-installation-methods/air-gapped/air-gapped.adoc
:xref-enable-api-audit-log: xref:observability/logging/enable-api-audit-log.adoc
:xref-tls-settings: xref:installation-and-upgrade/references/tls-settings.adoc
:xref-tuning-etcd-for-large-installs: xref:installation-and-upgrade/best-practices/tuning-etcd-for-large-installs.adoc
:xref-custom-root-ca-cert: xref:installation-and-upgrade/resources/custom-ca-root-certificates.adoc
:xref-local-system-chart: xref:installation-and-upgrade/other-installation-methods/air-gapped/local-system-charts.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:xref-air-gap: xref:getting-started/installation-and-upgrade/other-installation-methods/air-gapped-helm-cli-install/index.adoc
:xref-enable-api-audit-log: xref:how-to-guides/advanced-user-guides/enable-api-audit-log.adoc
:xref-tls-settings: xref:getting-started/installation-and-upgrade/installation-references/tls-settings.adoc
:xref-tuning-etcd-for-large-installs: xref:how-to-guides/advanced-user-guides/tune-etcd-for-large-installs.adoc
:xref-custom-root-ca-cert: xref:getting-started/installation-and-upgrade/resources/custom-ca-root-certificates.adoc
:xref-local-system-chart: xref:getting-started/installation-and-upgrade/resources/local-system-charts.adoc
endif::[]

ifeval::["{build-type}" == "community"]
[#_docker_installations]
== Docker Installations

The xref:getting-started/installation-and-upgrade/index.adoc#_docker_install[single-node Docker installation] is for Rancher users that are wanting to test out Rancher. Instead of running on a Kubernetes cluster using Helm, you install the Rancher server component on a single node using a `docker run` command.

Since there is only one node and a single Docker container, if the node goes down, there is no copy of the etcd data available on other nodes and you will lose all the data of your Rancher server.
endif::[]

== Air-Gapped Installations

Follow {xref-air-gap}[these steps] to install the Rancher server in an air gapped environment.

An air gapped environment could be where Rancher server will be installed offline, behind a firewall, or behind a proxy.

== Advanced Options

When installing Rancher, there are several advanced options that can be enabled during installation. Within each install guide, these options are presented. Learn more about these options:

* {xref-custom-root-ca-cert}[Custom CA Certificate]
* {xref-enable-api-audit-log}[API Audit Log]
* {xref-tls-settings}[TLS Settings]
* {xref-tuning-etcd-for-large-installs}[etcd configuration]
* {blank}
+
[cols=2*]
|===
| {xref-local-system-chart}[Local System Charts for Air Gap Installations]
| v2.3.0
|===
